// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/EmptyState With Link 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-eggNIi fRKxUt sc-emptystate"
  >
    <div
      className="sc-jNMdTA ideqbN"
    >
      <div
        className="sc-bBrOnJ kslhCT"
      >
        <i
          className="fas fa-server"
        />
      </div>
    </div>
    <div
      className="sc-jNMdTA ideqbN"
    >
      <h3
        className="sc-cTkwdZ jgiGzD"
      >
        A list of 
        nodes
         will appear here
      </h3>
    </div>
    <div
      className="sc-jNMdTA ideqbN"
    >
      <h3
        className="sc-cTkwdZ jgiGzD"
      >
        There are no 
        nodes
         created yet, let's create your first
         
        node
        .
      </h3>
    </div>
    <div
      className="sc-dOSReg YzaVf"
    >
      <button
        className="sc-dQppl ZagCn sc-button"
        disabled={false}
        onClick={[Function]}
        size="large"
        title=""
        type="button"
      >
        <span
          className="sc-hBEYos hgFzca"
        >
          <span
            className="sc-button-text"
          >
            <span
              className="sc-bqyKva klTaQG"
              size="large"
            >
              <i
                className="fas fa-plus"
              />
            </span>
            <span
              className="sc-kstrdz ZegCk"
            >
              Create node
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EmptyState Without Link 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-eggNIi fRKxUt sc-emptystate"
  >
    <div
      className="sc-jNMdTA ideqbN"
    >
      <div
        className="sc-bBrOnJ kslhCT"
      >
        <i
          className="fas fa-server"
        />
      </div>
    </div>
    <div
      className="sc-jNMdTA ideqbN"
    >
      <h3
        className="sc-cTkwdZ jgiGzD"
      >
        A list of 
        nodes
         will appear here
      </h3>
    </div>
    <div
      className="sc-jNMdTA ideqbN"
    >
      <h3
        className="sc-cTkwdZ jgiGzD"
      >
        There are no 
        nodes
         created yet, let's create your first
         
        node
        .
      </h3>
    </div>
  </div>
</div>
`;
